# mod-playerbots

./: .gitignore  extract_ac_client_data.sh
conf/: playerbots.conf.dist
docs/: llm_agent_design.md  llm_agent_tools_and_scenarios.md
docs/superpowers/plans/: 2026-05-12-llm-agent-phase-0.5-hardware-validation.md  2026-05-12-llm-agent-phase-0.5-rocm-comparison.md  2026-05-12-llm-agent-phase-1-plumbing-spike.md  2026-05-13-llm-agent-phase-2-validator-apply.md  2026-05-13-llm-agent-phase-3-memory-sidecar.md  2026-05-13-llm-agent-phase-4-t2-interactive.md  2026-05-14-llm-agent-phase-5-t3-chat-brain.md
docs/superpowers/specs/: 2026-05-12-llm-agent-phase-0.5-hardware-validation-design.md  2026-05-12-llm-agent-phase-0.5-rocm-comparison-design.md  2026-05-12-llm-agent-phase-1-plumbing-spike-design.md  2026-05-13-llm-agent-phase-2-design.md  2026-05-13-llm-agent-phase-3-memory-sidecar-design.md  2026-05-13-llm-agent-phase-4-t2-interactive-design.md  2026-05-13-llm-agent-phase-5-t3-chat-brain-design.md
infra/heimdal/: README.md  gpu-fan-max.service  llama-embed.container  llama-embed.env  llama-server-rocm.container  llama-server-rocm.env  llama-server.container  llama-server.env  memory-sidecar.container  memory-sidecar.env  sudoers-llama-server
memory-sidecar/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
memory-sidecar/etc/: tokens.example.yaml
memory-sidecar/migrations/: 0001_v01_baseline.sql  0002_add_memory_columns.sql  0003_add_entity_type.sql  0004_create_goals.sql  0005_create_fts5.sql
memory-sidecar/scripts/: reembed_all.py
memory-sidecar/src/memory_sidecar/: db.py  embed.py  helpers.py  main.py  mcp_auth.py  mcp_server.py  migrations.py  pubsub.py  recall.py  routes_events.py  routes_goals.py  routes_memory.py  routes_personality.py  search.py  sse_format.py  tool_schemas.py
memory-sidecar/tests/: conftest.py  test_embed.py  test_endpoints_goals.py  test_endpoints_personality.py  test_endpoints_read_list.py  test_endpoints_recall.py  test_endpoints_recall_about.py  test_endpoints_search.py  test_endpoints_update.py  test_endpoints_write.py  test_eviction.py  test_fts_query.py  test_mcp_schemas.py  test_mcp_server.py  test_migrations.py  test_pubsub.py  test_pubsub_integration.py  test_recall_scoring.py  test_routes_events.py  test_schema.py  test_search_rrf_mmr.py  test_sse_endpoint.py  test_sse_format.py
memory-sidecar/tests/integration/: test_v021_latency.py  test_v02_endpoints.py
results/2026-05-12-llm-phase-1-smoke/: sample_records.jsonl  summary.md
results/2026-05-12-rocm/: results.csv  summary.md
results/2026-05-12-vulkan/: results.csv  summary.md
results/2026-05-13-llm-phase-2-smoke/: sample_records.jsonl  summary.md
results/2026-05-13-llm-phase-3-smoke/: sample_records.jsonl  summary.md
results/2026-05-13-llm-phase-4-smoke/: sample_records.jsonl  summary.md
results/2026-05-14-llm-phase-5-smoke/: coredumps.txt  sample_records.jsonl  summary.md
src/: PlayerbotAIConfig.cpp  PlayerbotAIConfig.h
src/Ai/Base/: ActionContext.h  TriggerContext.h
src/Ai/Dungeon/: DungeonStrategyContext.h
src/Bot/: PlayerbotAI.cpp  PlayerbotAI.h  RandomPlayerbotMgr.cpp
src/Bot/Engine/: BuildSharedActionContexts.cpp  BuildSharedStrategyContexts.cpp  BuildSharedTriggerContexts.cpp
src/Bot/Factory/: AiFactory.cpp  (+1 more)
src/Script/: PlayerbotCommandScript.cpp  Playerbots.cpp
tests/llmagent/: CMakeLists.txt  doctest_main.cpp  test_chat_envelope_parser.cpp  test_config_load.cpp  test_cooldown.cpp  test_counters.cpp  test_digest_shape.cpp  test_event_buffer.cpp  test_goal_parser.cpp  test_http_client.cpp  test_interaction_buffer.cpp  test_manager_threading.cpp  test_memory_client.cpp  test_persona_cache.cpp  test_selector.cpp  test_tool_catalog.cpp  test_tool_parser.cpp  test_tool_validators.cpp  test_validator.cpp  test_whisper_buffer.cpp
tools/llm-bench/: .gitignore  README.md  bench.py  pyproject.toml
tools/llm-bench/fixtures/: 01-orc-warrior-lv10.json  02-undead-mage-lv37.json  03-troll-shaman-lv70.json  04-tauren-druid-lv22.json  05-be-paladin-lv50.json  06-human-rogue-lv80.json  07-dwarf-hunter-lv45-adversarial.json  08-gnome-warlock-lv60.json  09-ne-priest-lv30.json  10-orc-dk-lv58.json  README.md
tools/llm-bench/grammars/: goal.gbnf
tools/llm-bench/llmbench/: __init__.py  aggregate.py  driver.py  gpu.py  output.py  request.py  server.py  validator.py  vram.py
tools/llm-bench/schemas/: goal_schema.json
tools/llm-bench/tests/: test_aggregate.py  test_gpu.py  test_output.py  test_request.py  test_server.py  test_smoke.py  test_validator.py  test_vram.py
(+109 files in other folders)
