[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-sidecar"
version = "0.1.0"
description = "Per-bot memory sidecar for mod-playerbots LLM agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlite-vec>=0.1.7",
    "httpx>=0.27",
    "numpy>=1.26",
    "mcp>=1.27.1,<2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live llama-embed (not run by default)",
]
addopts = "-v -m 'not integration'"
